--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "craft-connection",
-  "homepage": "https://MachopCodes.github.io/craft-connection",
+  "homepage": "https://wscraftconnection.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
